--- a/src/package2/MainScreen.fxml
+++ b/src/package2/MainScreen.fxml
@@ -8,22 +8,28 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="package2.MainScreenController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Open" />
-                  <MenuItem mnemonicParsing="false" text="Close" />
-                  <MenuItem mnemonicParsing="false" text="Save" />
-                  <MenuItem mnemonicParsing="false" text="Exit" />
+              <MenuItem fx:id="open" mnemonicParsing="false" onAction="#OpenAction" text="Open" />
+                  <MenuItem fx:id="close" mnemonicParsing="false" onAction="#CloseAction" text="Close" />
+                  <MenuItem fx:id="save" mnemonicParsing="false" onAction="#SaveAction" text="Save" />
+                  <MenuItem fx:id="exit" mnemonicParsing="false" onAction="#ExitAction" text="Exit" />
             </items>
           </Menu>
+            <Menu mnemonicParsing="false" text="Color">
+               <items>
+                  <RadioMenuItem fx:id="red" mnemonicParsing="false" onAction="#redColorAction" style="-fx-text-fill: red;" text="Red" />
+                  <RadioMenuItem fx:id="cyan" mnemonicParsing="false" onAction="#cyanColorAction" style="-fx-text-fill: cyan;" text="Cyan" />
+                  <RadioMenuItem fx:id="gold" mnemonicParsing="false" onAction="#goldColorAction" style="-fx-text-fill: gold;" text="Gold" />
+               </items>
+            </Menu>
           <Menu mnemonicParsing="false" text="About">
             <items>
-              <MenuItem mnemonicParsing="false" text="about" />
+              <MenuItem fx:id="about" mnemonicParsing="false" onAction="#AboutAction" text="about" />
             </items>
           </Menu>
         </menus>
@@ -32,8 +38,8 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <TextArea prefHeight="257.0" prefWidth="600.0" promptText="Choze File to Open" style="-fx-background-color: white;" />
-            <Slider blockIncrement="5.0" majorTickUnit="5.0" max="35.0" min="5.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5.0">
+            <TextArea fx:id="textArea" prefHeight="257.0" prefWidth="600.0" promptText="Choze File to Open" style="-fx-background-color: white;" />
+            <Slider fx:id="slider" blockIncrement="5.0" majorTickUnit="5.0" max="35.0" min="5.0" minorTickCount="4" onDragDetected="#sliderAction" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5.0">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -50,8 +56,8 @@
    <bottom>
       <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <ComboBox prefWidth="150.0" promptText="Chooze a web page" translateY="30.0" />
-            <WebView prefHeight="100.0" prefWidth="453.0" />
+            <ComboBox fx:id="pages" onAction="#comboAction" prefWidth="150.0" promptText="Chooze a web page" translateY="30.0" />
+            <WebView fx:id="webView" prefHeight="100.0" prefWidth="453.0" />
          </children>
       </HBox>
    </bottom>
